Thu Jul 12 10:18:40 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not cancel the protocol in silc_server_close_connection
	  it might cause recursion.  Now cancelled in the function
	  silc_server_free_sock_user_data.  Affected file silcd/server.c.

	* Fixed the silc_server_remove_clients_by_server to regenerate
	  the channel keys correctly finally.  Added also new function
	  silc_server_remove_clients_channels to actually do it.
	  Affected file silcd/server.c.

	* Fixed the silc_server_new_channel to not crash by giving
	  wrong router to the new channel.  Affected file is
	  silcd/packet_receive.c.

Wed Jul 11 18:31:57 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added SilcClientParams structure to the lib/silcclient/silcapi.h
	  which is given as argument to the silc_client_alloc now.
	  It can be used to configure the client and set various parameters
	  that affect the function of the client.

	* The USERS command in server did not check whether the channel
	  is private or secret.  Affected file silcd/command.c.

	* Added new argument to the USERS command in protocol specification.
	  The USERS command now can take the channel name as argument
	  as well.  Added support for this in client and server and
	  updated the protocol specs.

	* Completed the GETKEY command in client. It can be now used
	  to fetch also servers public key not only some clients. 
	  Affected files lib/silcclient/command[_reply].c.

	* Added silc_client_get_server to return server entry by the
	  server name.  Affected files lib/silcclient/silcapi.h and
	  idlist.c.

	* Redefined the IDENTIFY command in protocol specification to be
	  more generic.  It now can be used to query information about
	  any entity in the SILC Network, including clients, servers and
	  channels.  The query may be based either the entity's name
	  or the ID.  Added support for this in both client and server.

	  Affected files silcd/command.c and lib/silcclient/command.c