@@ -82,8 +82,8 @@ const SilcCommandStatusMessage silc_command_status_messages[] = {
   { STAT(NO_SERVER_ID),      "No Server ID given" },
   { STAT(BAD_CLIENT_ID),     "Bad Client ID" },
   { STAT(BAD_CHANNEL_ID),    "Bad Channel ID" },
-  { STAT(NO_SUCH_CLIENT_ID), "There was no such client" },
-  { STAT(NO_SUCH_CHANNEL_ID),"There was no such channel" },
+  { STAT(NO_SUCH_CLIENT_ID), "There is no such client" },
+  { STAT(NO_SUCH_CHANNEL_ID),"There is no such channel" },
   { STAT(NICKNAME_IN_USE),   "Nickname already exists" },
   { STAT(NOT_ON_CHANNEL),    "You are not on that channel" },
   { STAT(USER_NOT_ON_CHANNEL),"They are not on the channel" },
